[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.0.1-dev"
authors = ["Martin Dickopp"]
edition = "2021"
rust-version = "1.84"
description = "PackageSphinx is a proxy, archive, and firewall for software packages."
readme = "README.md"
homepage = "https://github.com/mdickopp/package-sphinx"
repository = "https://github.com/mdickopp/package-sphinx"
license = "Apache-2.0"
keywords = ["proxy", "archive", "software"]
publish = false

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
