[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.0.1-dev"
authors = ["Martin Dickopp"]
edition = "2024"
rust-version = "1.85"
readme = "README.md"
homepage = "https://github.com/mdickopp/package-sphinx"
repository = "https://github.com/mdickopp/package-sphinx"
license = "Apache-2.0"
publish = false

[profile.release]
strip = "symbols"
lto = "fat"
codegen-units = 1
