[package]
name = "package-sphinx-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Software package proxy, archive, and firewall server"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
